--- a/packaged.yaml
+++ b/packaged.yaml
@@ -1,82 +1,90 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: >-
-  A serverless component for conversion from FLV to MP4
-
+Description: A serverless component for conversion from FLV to MP4
 Transform:
 - AWS::Serverless-2016-10-31
-
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: s3-lamda-flv-to-mp4-converter
     Description: AWS S3 Lambda Video Converter
     Author: Adewole Mayowa
     SpdxLicenseId: MIT
-    LicenseUrl: LICENSE.txt
-    ReadmeUrl: README.md
-    Labels: ['s3', 'lambda', 'video-converter']
+    LicenseUrl: s3://aws-sam-cli-managed-default-samclisourcebucket-1em8qocizdah/be37126caac58eb035f6b8cce3ed9dc2
+    ReadmeUrl: s3://aws-sam-cli-managed-default-samclisourcebucket-1em8qocizdah/b1f84392c6970270f476e07bd5f281f7
+    Labels:
+    - s3
+    - lambda
+    - video converter
     HomePageUrl: https://github.com/mayordwells/s3-lamda-flv-to-mp4-converter
     SemanticVersion: 1.0.0
     SourceCodeUrl: https://github.com/mayordwells/s3-lamda-flv-to-mp4-converter
-
 Parameters:
   ConversionTimeout:
     Type: Number
     Default: 300
   InputS3BucketName:
     Type: String
-    Default: 'mayowas-s3-lambda-ffmpeg-input-mov-bucket'
+    Default: mayowas-s3-lambda-ffmpeg-input-mov-bucket
     MinLength: 3
   AwsRegion:
     Type: String
-    Default: 'eu-central-1'
+    Default: eu-central-1
   OutputS3BucketName:
     Type: String
-    Default: 'mayowas-s3-lambda-ffmpeg-output-mp4-bucket'
+    Default: mayowas-s3-lambda-ffmpeg-output-mp4-bucket
     MinLength: 3
   LayerArn:
     Type: String
-    Default: 'arn:aws:lambda:eu-central-1:949696328322:layer:ffmpeg:1'
-
+    Default: arn:aws:lambda:eu-central-1:949696328322:layer:ffmpeg:1
 Resources:
   InputS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Ref InputS3BucketName
+      BucketName:
+        Ref: InputS3BucketName
   ConvertFileFunction:
     Type: AWS::Serverless::Function
     Properties:
       Handler: src/handlers/index.handler
-      Timeout: !Ref ConversionTimeout
+      Timeout:
+        Ref: ConversionTimeout
       MemorySize: 1024
       Runtime: nodejs12.x
       Layers:
-        - !Ref LayerArn
+      - Ref: LayerArn
       Policies:
       - S3CrudPolicy:
-          BucketName: !Ref OutputS3BucketName
+          BucketName:
+            Ref: OutputS3BucketName
       - S3ReadPolicy:
-          BucketName: !Ref InputS3BucketName
+          BucketName:
+            Ref: InputS3BucketName
       Environment:
         Variables:
-          OUTPUT_BUCKET: !Ref OutputS3Bucket
-          EXTENSION: '.mp4'
-          MIME_TYPE: 'video/mp4'
-          REGION: !Ref AwsRegion
+          OUTPUT_BUCKET:
+            Ref: OutputS3Bucket
+          EXTENSION: .mp4
+          MIME_TYPE: video/mp4
+          REGION:
+            Ref: AwsRegion
       Events:
         FileUpload:
           Type: S3
           Properties:
-            Bucket: !Ref InputS3Bucket
+            Bucket:
+              Ref: InputS3Bucket
             Events: s3:ObjectCreated:*
+      CodeUri: s3://aws-sam-cli-managed-default-samclisourcebucket-1em8qocizdah/db2f6a75964827c0e6df2f5cb41b8a0e
   OutputS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Ref OutputS3BucketName
-
+      BucketName:
+        Ref: OutputS3BucketName
 Outputs:
   InputS3Bucket:
     Description: Input S3 bucket
-    Value: !Ref InputS3Bucket
+    Value:
+      Ref: InputS3Bucket
   OutputS3Bucket:
     Description: Output S3 bucket
-    Value: !Ref OutputS3Bucket
+    Value:
+      Ref: OutputS3Bucket
